ParMocha.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParMocha.y
-----------------------------------------------------------------------------

state 112 contains 1 shift/reduce conflicts.

rule 36 is unused
rule 37 is unused
rule 38 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListFunc                                (4)
	Func -> Type Ident '(' ListArg ')' Block           (5)
	ListFunc -> Func                                   (6)
	ListFunc -> Func ListFunc                          (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> ListStmt Stmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Type Ident '(' ListArg ')' Block           (18)
	Stmt -> Ident '=' Expr ';'                         (19)
	Stmt -> 'return' Expr ';'                          (20)
	Stmt -> 'return' ';'                               (21)
	Stmt -> 'if' '(' Expr ')' Stmt                     (22)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (23)
	Stmt -> 'while' '(' Expr ')' Stmt                  (24)
	Stmt -> 'for' Ident '=' Expr 'to' Expr 'do' Stmt   (25)
	Stmt -> 'for' Ident '=' Expr 'downto' Expr 'do' Stmt   (26)
	Stmt -> Expr ';'                                   (27)
	Item -> Ident                                      (28)
	Item -> Ident '=' Expr                             (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	Type -> 'int'                                      (32)
	Type -> 'string'                                   (33)
	Type -> 'boolean'                                  (34)
	Type -> 'void'                                     (35)
	ListType ->                                        (36)
	ListType -> Type                                   (37)
	ListType -> Type ',' ListType                      (38)
	Expr6 -> Ident                                     (39)
	Expr6 -> Integer                                   (40)
	Expr6 -> 'true'                                    (41)
	Expr6 -> 'false'                                   (42)
	Expr6 -> Ident '(' ListExpr ')'                    (43)
	Expr6 -> String                                    (44)
	Expr6 -> '(' Expr ')'                              (45)
	Expr5 -> '-' Expr6                                 (46)
	Expr5 -> '!' Expr6                                 (47)
	Expr5 -> Expr6                                     (48)
	Expr4 -> Expr4 MulOp Expr5                         (49)
	Expr4 -> Expr5                                     (50)
	Expr3 -> Expr3 AddOp Expr4                         (51)
	Expr3 -> Expr4                                     (52)
	Expr2 -> Expr2 RelOp Expr3                         (53)
	Expr2 -> Expr3                                     (54)
	Expr1 -> Expr2 '&&' Expr1                          (55)
	Expr1 -> Expr2                                     (56)
	Expr -> Expr1 '||' Expr                            (57)
	Expr -> Expr1                                      (58)
	ListExpr ->                                        (59)
	ListExpr -> Expr                                   (60)
	ListExpr -> Expr ',' ListExpr                      (61)
	AddOp -> '+'                                       (62)
	AddOp -> '-'                                       (63)
	MulOp -> '*'                                       (64)
	MulOp -> '/'                                       (65)
	MulOp -> '%'                                       (66)
	RelOp -> '<'                                       (67)
	RelOp -> '<='                                      (68)
	RelOp -> '>'                                       (69)
	RelOp -> '>='                                      (70)
	RelOp -> '=='                                      (71)
	RelOp -> '!='                                      (72)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'boolean'      { PT _ (TS _ 19) }
	'do'           { PT _ (TS _ 20) }
	'downto'       { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'for'          { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'return'       { PT _ (TS _ 27) }
	'string'       { PT _ (TS _ 28) }
	'to'           { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'void'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Func            rule  5
	ListFunc        rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	Type            rules 32, 33, 34, 35
	ListType        rules 36, 37, 38
	Expr6           rules 39, 40, 41, 42, 43, 44, 45
	Expr5           rules 46, 47, 48
	Expr4           rules 49, 50
	Expr3           rules 51, 52
	Expr2           rules 53, 54
	Expr1           rules 55, 56
	Expr            rules 57, 58
	ListExpr        rules 59, 60, 61
	AddOp           rules 62, 63
	MulOp           rules 64, 65, 66
	RelOp           rules 67, 68, 69, 70, 71, 72

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	Func           goto state 4
	ListFunc       goto state 5
	Type           goto state 6

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'do'           reduce using rule 1
	'downto'       reduce using rule 1
	'to'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFunc -> Func .                                  (rule 6)
	ListFunc -> Func . ListFunc                         (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 6

	Func           goto state 4
	ListFunc       goto state 12
	Type           goto state 6

State 5

	Program -> ListFunc .                               (rule 4)

	%eof           reduce using rule 4


State 6

	Func -> Type . Ident '(' ListArg ')' Block          (rule 5)

	L_ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 34)

	L_ident        reduce using rule 34


State 8

	Type -> 'int' .                                     (rule 32)

	L_ident        reduce using rule 32


State 9

	Type -> 'string' .                                  (rule 33)

	L_ident        reduce using rule 33


State 10

	Type -> 'void' .                                    (rule 35)

	L_ident        reduce using rule 35


State 11

	Func -> Type Ident . '(' ListArg ')' Block          (rule 5)

	'('            shift, and enter state 13


State 12

	ListFunc -> Func ListFunc .                         (rule 7)

	%eof           reduce using rule 7


State 13

	Func -> Type Ident '(' . ListArg ')' Block          (rule 5)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 15
	Type           goto state 16

State 14

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 19


State 15

	Func -> Type Ident '(' ListArg . ')' Block          (rule 5)

	')'            shift, and enter state 18


State 16

	Arg -> Type . Ident                                 (rule 8)

	L_ident        shift, and enter state 2

	Ident          goto state 17

State 17

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 18

	Func -> Type Ident '(' ListArg ')' . Block          (rule 5)

	'{'            shift, and enter state 22

	Block          goto state 21

State 19

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 14
	ListArg        goto state 20
	Type           goto state 16

State 20

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 21

	Func -> Type Ident '(' ListArg ')' Block .          (rule 5)

	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 22

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            reduce using rule 13
	'('            reduce using rule 13
	'-'            reduce using rule 13
	';'            reduce using rule 13
	'boolean'      reduce using rule 13
	'false'        reduce using rule 13
	'for'          reduce using rule 13
	'if'           reduce using rule 13
	'int'          reduce using rule 13
	'return'       reduce using rule 13
	'string'       reduce using rule 13
	'true'         reduce using rule 13
	'void'         reduce using rule 13
	'while'        reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	L_ident        reduce using rule 13
	L_integ        reduce using rule 13
	L_quoted       reduce using rule 13

	ListStmt       goto state 23

State 23

	Block -> '{' ListStmt . '}'                         (rule 12)
	ListStmt -> ListStmt . Stmt                         (rule 14)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	';'            shift, and enter state 40
	'boolean'      shift, and enter state 7
	'false'        shift, and enter state 41
	'for'          shift, and enter state 42
	'if'           shift, and enter state 43
	'int'          shift, and enter state 8
	'return'       shift, and enter state 44
	'string'       shift, and enter state 9
	'true'         shift, and enter state 45
	'void'         shift, and enter state 10
	'while'        shift, and enter state 46
	'{'            shift, and enter state 22
	'}'            shift, and enter state 47
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 24
	Integer        goto state 25
	String         goto state 26
	Block          goto state 27
	Stmt           goto state 28
	Type           goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 36

State 24

	Stmt -> Ident . '=' Expr ';'                        (rule 19)
	Expr6 -> Ident .                                    (rule 39)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 43)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	'('            shift, and enter state 79
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'='            shift, and enter state 80
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 25

	Expr6 -> Integer .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'do'           reduce using rule 40
	'downto'       reduce using rule 40
	'to'           reduce using rule 40
	'||'           reduce using rule 40


State 26

	Expr6 -> String .                                   (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'do'           reduce using rule 44
	'downto'       reduce using rule 44
	'to'           reduce using rule 44
	'||'           reduce using rule 44


State 27

	Stmt -> Block .                                     (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'boolean'      reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'for'          reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 28

	ListStmt -> ListStmt Stmt .                         (rule 14)

	'!'            reduce using rule 14
	'('            reduce using rule 14
	'-'            reduce using rule 14
	';'            reduce using rule 14
	'boolean'      reduce using rule 14
	'false'        reduce using rule 14
	'for'          reduce using rule 14
	'if'           reduce using rule 14
	'int'          reduce using rule 14
	'return'       reduce using rule 14
	'string'       reduce using rule 14
	'true'         reduce using rule 14
	'void'         reduce using rule 14
	'while'        reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14


State 29

	Stmt -> Type . ListItem ';'                         (rule 17)
	Stmt -> Type . Ident '(' ListArg ')' Block          (rule 18)

	L_ident        shift, and enter state 2

	Ident          goto state 76
	Item           goto state 77
	ListItem       goto state 78

State 30

	Expr5 -> Expr6 .                                    (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'do'           reduce using rule 48
	'downto'       reduce using rule 48
	'to'           reduce using rule 48
	'||'           reduce using rule 48


State 31

	Expr4 -> Expr5 .                                    (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'do'           reduce using rule 50
	'downto'       reduce using rule 50
	'to'           reduce using rule 50
	'||'           reduce using rule 50


State 32

	Expr4 -> Expr4 . MulOp Expr5                        (rule 49)
	Expr3 -> Expr4 .                                    (rule 52)

	'!='           reduce using rule 52
	'%'            shift, and enter state 73
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'*'            shift, and enter state 74
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            shift, and enter state 75
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'do'           reduce using rule 52
	'downto'       reduce using rule 52
	'to'           reduce using rule 52
	'||'           reduce using rule 52

	MulOp          goto state 72

State 33

	Expr3 -> Expr3 . AddOp Expr4                        (rule 51)
	Expr2 -> Expr3 .                                    (rule 54)

	'!='           reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'+'            shift, and enter state 70
	','            reduce using rule 54
	'-'            shift, and enter state 71
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	'do'           reduce using rule 54
	'downto'       reduce using rule 54
	'to'           reduce using rule 54
	'||'           reduce using rule 54

	AddOp          goto state 69

State 34

	Expr2 -> Expr2 . RelOp Expr3                        (rule 53)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 55)
	Expr1 -> Expr2 .                                    (rule 56)

	'!='           shift, and enter state 62
	'&&'           shift, and enter state 63
	')'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	'<'            shift, and enter state 64
	'<='           shift, and enter state 65
	'=='           shift, and enter state 66
	'>'            shift, and enter state 67
	'>='           shift, and enter state 68
	'do'           reduce using rule 56
	'downto'       reduce using rule 56
	'to'           reduce using rule 56
	'||'           reduce using rule 56

	RelOp          goto state 61

State 35

	Expr -> Expr1 . '||' Expr                           (rule 57)
	Expr -> Expr1 .                                     (rule 58)

	')'            reduce using rule 58
	','            reduce using rule 58
	';'            reduce using rule 58
	'do'           reduce using rule 58
	'downto'       reduce using rule 58
	'to'           reduce using rule 58
	'||'           shift, and enter state 60


State 36

	Stmt -> Expr . ';'                                  (rule 27)

	';'            shift, and enter state 59


State 37

	Expr5 -> '!' . Expr6                                (rule 47)

	'('            shift, and enter state 38
	'false'        shift, and enter state 41
	'true'         shift, and enter state 45
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 51
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 58

State 38

	Expr6 -> '(' . Expr ')'                             (rule 45)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	'false'        shift, and enter state 41
	'true'         shift, and enter state 45
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 51
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 57

State 39

	Expr5 -> '-' . Expr6                                (rule 46)

	'('            shift, and enter state 38
	'false'        shift, and enter state 41
	'true'         shift, and enter state 45
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 51
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 56

State 40

	Stmt -> ';' .                                       (rule 15)

	'!'            reduce using rule 15
	'('            reduce using rule 15
	'-'            reduce using rule 15
	';'            reduce using rule 15
	'boolean'      reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'for'          reduce using rule 15
	'if'           reduce using rule 15
	'int'          reduce using rule 15
	'return'       reduce using rule 15
	'string'       reduce using rule 15
	'true'         reduce using rule 15
	'void'         reduce using rule 15
	'while'        reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15


State 41

	Expr6 -> 'false' .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'do'           reduce using rule 42
	'downto'       reduce using rule 42
	'to'           reduce using rule 42
	'||'           reduce using rule 42


State 42

	Stmt -> 'for' . Ident '=' Expr 'to' Expr 'do' Stmt    (rule 25)
	Stmt -> 'for' . Ident '=' Expr 'downto' Expr 'do' Stmt    (rule 26)

	L_ident        shift, and enter state 2

	Ident          goto state 55

State 43

	Stmt -> 'if' . '(' Expr ')' Stmt                    (rule 22)
	Stmt -> 'if' . '(' Expr ')' Stmt 'else' Stmt        (rule 23)

	'('            shift, and enter state 54


State 44

	Stmt -> 'return' . Expr ';'                         (rule 20)
	Stmt -> 'return' . ';'                              (rule 21)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	';'            shift, and enter state 53
	'false'        shift, and enter state 41
	'true'         shift, and enter state 45
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 48
	L_quoted       shift, and enter state 49

	Ident          goto state 51
	Integer        goto state 25
	String         goto state 26
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 52

State 45

	Expr6 -> 'true' .                                   (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'do'           reduce using rule 41
	'downto'       reduce using rule 41
	'to'           reduce using rule 41
	'||'           reduce using rule 41


State 46

	Stmt -> 'while' . '(' Expr ')' Stmt                 (rule 24)

	'('            shift, and enter state 50


State 47

	Block -> '{' ListStmt '}' .                         (rule 12)

	'!'            reduce using rule 12
	'('            reduce using rule 12
	'-'            reduce using rule 12
	';'            reduce using rule 12
	'boolean'      reduce using rule 12
	'else'         reduce using rule 12
	'false'        reduce using rule 12
	'for'          reduce using rule 12
	'if'           reduce using rule 12
	'int'          reduce using rule 12
	'return'       reduce using rule 12
	'string'       reduce using rule 12
	'true'         reduce using rule 12
	'void'         reduce using rule 12
	'while'        reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	L_ident        reduce using rule 12
	L_integ        reduce using rule 12
	L_quoted       reduce using rule 12
	%eof           reduce using rule 12


State 48

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'do'           reduce using rule 2
	'downto'       reduce using rule 2
	'to'           reduce using rule 2
	'||'           reduce using rule 2


State 49

	String -> L_quoted .                                (rule 3)
